<resources>
    <string name="app_name">FormProfesor</string>
    <string name="menuInformacion">Información</string>
    <string name="menuAyuda">Ayuda</string>
    <string name="menuSalir">Salir</string>
    <string name="menuNuevoForm">Nuevo Formulario</string>
    <string name="btnAñadirForm">Añadir Formulario</string>
    <string name="ToastInfo">Información de la Aplicación</string>
    <string name="ToastAyuda">Ayuda de la Aplicación</string>
    <string name="ToastAtras">Presione de nuevo para salir</string>
    <string name="DialogTitlleCerrar">Confirmar Cerrar</string>
    <string name="DialogMessgeCerrar">Desea realmente salir de la aplicación</string>
    <string name="btnSi">Si</string>
    <string name="btnNo">No</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="TextInf">Apicación desarrollada por la Facultad de Informática de la cujae dedicada a los profesores y maestros del Ministerio de Educación para la formación vocacional de los estudiantes</string>
    <string name="DialogNuevForm">Escriba el nombre del Formulario</string>
    <string name="btnAñadirPreg">Añadir Pregunta</string>
    <string name="ToastCreado">Se ha creado un nuevo Formulario llamado: </string>
    <string name="TipoVerdFals">Tipo de Pregunta: VERDADERO O FALSO</string>
    <string name="TipoNumeric">Tipo de Pregunta: NUMÉRICA</string>
    <string name="TipoSelecc">Tipo de Pregunta: SELECCIÓN</string>
    <string name="DialogSeleccion">Selección</string>
    <string name="DialogNumeric">Numérica</string>
    <string name="DialogVerdFals">Verdadero o Falso</string>
    <string name="FacInfor">Facultad de Informática</string>
    <string name="TotalPreg">Total de Preguntas:</string>
    <string name="CreatuspropiosForms">Crea tus propios Formularios en Android</string>
    <string name="EscribaEnunciado">Escriba el enunciado de la pregunta</string>
    <string name="ConfirmEliminar">Confirmar eliminación</string>
    <string name="SeleccTipoPreg">Seleccione un tipo de pregunta</string>
    <string name="CbrNombForm">Cambiar Nombre del Formulario</string>
    <string name="EscrNonbNuevForm">Escriba el nuevo nombre del Formulario</string>
    <string name="ValidCmpoNoVacio">Este campo no puede estar vacío</string>
    <string name="ValidTodCampVacios">Todos los campos deben estar llenos</string>
    <string name="spinnVerd">Verdad</string>
    <string name="spinnFals">Falso</string>
    <string name="dbLLenrEstPreg">Debe llenar este campo</string>
    <string name="contesCorrectPreg">Ha contestado correctamente esta pregunta</string>
    <string name="contestIncorrectPreg">Ha contestado incorrectamente esta pregunta</string>
    <string name="spinnTrue">V</string>
    <string name="DesElimPreg">Desea realmente eliminar esta pregunta</string>
    <string name="ElimadoPreg">Se ha eliminado correctamente la pregunta</string>
    <string name="DesRealElimForm">Desea realmente eliminar el Formulario: </string>
    <string name="FormElim">Se ha eliminado correctamente el Formulario: </string>
    <string name="TextAyu">Bienvenido a la Ayuda de la Aplicación. Para crear un nuevo Formulario de Preguntas presione el botón que se encuentra en la parte inferior de la pantalla principal o diríjase al menú desplegable y presione Nuevo Formulario, posteriormente escriba el nombre de dicho Formulario. Una vez creado el Formulario si se desea añadir una Pregunta debe presionar el botón Añadir Pregunta y elegir el tipo de Pregunta que usted desee. Recuerde llenar todos los espacios vacíos. </string>
</resources>
