<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzu"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.proyecto.gilsoft.formprofesor.app.InformacionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ToolbInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:titleTextColor="@android:color/white"
        android:weightSum="1"
        app:title="@string/menuInformacion"
        app:titleTextColor="@android:color/white"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/imgBackInform"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_back"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.05"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cujae" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.05"
                android:padding="5dp"
                android:text="@string/TextInf"
                android:textAlignment="center"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="7dp"
                android:layout_weight="0.63"
                app:srcCompat="@drawable/informatica" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:text="@string/FacInfor"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/CardForm"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="25dp"
                android:elevation="10dp"
                app:cardCornerRadius="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="3dp"
                        >

                        <TextView
                            android:id="@+id/NombForm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@android:color/white"
                            android:textSize="20dp" />

                    </android.support.v7.widget.CardView>

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_below="@+id/cardView"
                        android:layout_marginTop="7dp"
                        app:srcCompat="@drawable/iconprofesor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/imageView4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="Versión Beta Build 1.0"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
